<resources>
    <string name="app_name">DQTaharKeylen</string>
    <string name="intro"> Welcome to drivers Quiz</string>
    <string name="start">Start</string>
    <string name="generalQuery">Which image matches</string>
    <string name="score">Your score is</string>
    <string name="completed">You have completed </string>
    <string name="total">out of 10</string>
    <string name="next">Next question</string>
    <string name="about">About</string>
    <string name="instructions">Hello and welcome to our Drivers quiz!
        To play, you must first press Start. A description, and
        four road signs will be displayed. Based on the description, you must
        choose the road sign that matches the description. You are given 2
        tries to correctly guess each. If you are ever stuck on a question
        you can always press the Hint button to get a hint.At the end, your
        score will be displayed, and saved in our Hall Of Fame. Good Luck!</string>
    <string name="creators">Created by: Tahar and Keylen</string>
    <string name="hint">Hint</string>
    <string name="hint1">Road is not always in this condition</string>
    <string name="hint2">Very dangerous on 1 direction streets</string>
    <string name="hint3">Swerve incoming</string>
    <string name="hint4">Squeeze</string>
    <string name="question1">road surface in certain areas may be slippery when wet</string>
    <string name="question2">no U-turn</string>
    <string name="question3">winding road ahead</string>
    <string name="question4">bridge or tunnel is narrower than the approach</string>
    <string name="road_sign">Road sign </string>
    <string name="hall_of_fame">Hall Of Fame : </string>
    <string name="finished">The quiz is over</string>
</resources>
